--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     </div>
   </section>
 
-  <section class="promo-section reveal">
+  <section class="promo-section section reveal">
     <div class="container">
       <video class="background-video" autoplay muted loop playsinline>
         <source src="promo-video.mp4" type="video/mp4">
       </video>
       <div class="promo-content">
         <h2 class="promo-title">Experience Print Like Never Before</h2>
-        <p class="promo-sub">Watch how JB's Print&amp;Go delivers quality, precision, and speed.</p>
+        <p class="promo-sub">Watch how JB's Print&Go delivers quality, precision, and speed.</p>
       </div>
     </div>
   </section>
@@ -77,7 +77,7 @@
           <div class="swiper-slide card">
             <img src="service-printing.jpg" alt="Printing">
             <h3>Printing: Colored &amp; B&amp;W</h3>
-            <p>High-quality prints available in both colored and black &amp; white — perfect for documents and projects.
+            <p>High-quality prints available in both colored and black &amp; white — perfect for documents.
             </p>
           </div>
 
@@ -237,8 +237,19 @@
         e.preventDefault();
         const target = document.querySelector(link.getAttribute('href'));
         if (!target) return;
-        const offset = document.querySelector('.site-header').offsetHeight;
-        window.scrollTo({ top: target.offsetTop - offset, behavior: 'smooth' });
+
+        const targetTop = target.offsetTop;
+        const targetHeight = target.offsetHeight;
+        const windowHeight = window.innerHeight;
+        const offset = (windowHeight - targetHeight) / 2;
+
+        const headerHeight = document.querySelector('.site-header').offsetHeight;
+        const scrollY = targetTop - (headerHeight / 2) - offset;
+
+        window.scrollTo({
+          top: scrollY,
+          behavior: 'smooth'
+        });
       });
     });
 
